# openfold

./: .gitignore  installation.md  pyproject.toml  requirements.txt  requirements_macos.txt  requirements_old.txt  setup.py
openfold/: config.py
openfold/data/: data_transforms.py
openfold/model/: primitives.py  structure_module.py
openfold/np/: protein.py
openfold/utils/: checkpointing.py  loss.py  seed.py
openfold/utils/kernel/: attention_core.py
